    symbols by default.
  * Make Debian diff less intrusive by moving more logic into debian/rules.
  * Improve LD_LIBRARY_PATH handling by preventing trailing colons.
  * Let fsl-doc depend on fslview-doc to prevent dangling symlink.
  * Fixed location of lintian override.
  * Updated and completed list of licenses in debian/copyright.

 -- Michael Hanke <michael.hanke@gmail.com>  Fri, 21 Dec 2007 09:23:36 +0100

fsl (4.0.2-1) unstable; urgency=low

  * New upstream bugfix release.
    - Susan: multiple performance improvements
    - SienaX: bugfix in sienax regarding the -lm option
    - Avwutils: minor fixes to fslmaths and fslsplit
    - Feat5: multiple minor fixes
    - Film: minor fix
    - Flame: bugfix in the multiple-group-variances estimation
    - Fdt: minor changes and fixes
    - Miscvis: fixed Renderstats gui
  * Use new-style Homepage field in debian/control.
  * Replace deprecated 'Source-Version' substvar with 'source:Version' in
    debian/control.
  * Removed executable permissions from all '.gif' files.

 -- Michael Hanke <michael.hanke@gmail.com>  Fri, 16 Nov 2007 10:13:17 +0100

fsl (4.0.1-3) unstable; urgency=low

  * Added bc and dc to the dependencies.
  * Adjusted package build-deps to new libfftw3-dev package in Debian lenny.

 -- Michael Hanke <michael.hanke@gmail.com>  Mon, 12 Nov 2007 22:38:01 +0100

fsl (4.0.1-2) unstable; urgency=low

  * Added a lintian override for the Runtcl syntax warning. This file is
    actually a mixed sh and tclsh script.

 -- Michael Hanke <michael.hanke@gmail.com>  Wed,  5 Sep 2007 22:28:01 +0200

fsl (4.0.1-1) unstable; urgency=low

  * New upstream bugfix release.
  * BET can now store the brain surface in VTK format.

 -- Michael Hanke <michael.hanke@gmail.com>  Sat, 01 Sep 2007 10:53:23 +0200

fsl (4.0.0-2) unstable; urgency=low

  * Bugfix: fsl_sub made use of non-POSIX operator while interpreter was set
    to /bin/sh. This caused the script to fail on Ubuntu systems that have