@@ -3,7 +3,7 @@ Section: non-free/science
 Priority: optional
 Maintainer: Michael Hanke <michael.hanke@gmail.com>
 Build-Depends: debhelper (>= 4.0.0), zlib1g-dev (>= 1.2.2), libboost-dev (>= 1.32.0), fftw3-dev (>= 3.0.1) | libfftw3-dev, libpng12-dev (>= 1.2.8rel), libgd2-noxpm-dev (>= 2.0.33) | libgd2-xpm-dev (>= 2.0.33), fftw-dev (>= 2.1.3), libnewmat10-dev, libgdchart-gd2-noxpm-dev | libgdchart-gd2-xpm-dev, octave2.1-headers (>= 2.1.65), tcl8.4 (>=8.4.7), imagemagick, libfslio0-dev (>> 0.5-2), libniftiio1-dev | libniftiio-dev
-Standards-Version: 3.7.2
+Standards-Version: 3.7.3
 Homepage: http://www.fmrib.ox.ac.uk/fsl/
 Vcs-Browser: http://git.debian.org/?p=pkg-exppsy/fsl.git
 Vcs-Git: git://git.debian.org/git/pkg-exppsy/fsl.git
@@ -24,6 +24,7 @@ Description: analysis tools for FMRI, MRI and DTI brain imaging
  Caret, FreeSurfer (cortical flattening and modelling).
 
 Package: fsl-doc
+Section: non-free/doc
 Architecture: all
 Depends: fslview-doc
 Description: documentation for FSL
